npc erstellen, probleme beim speichern, nicht alle zellen werden befüllt. payload korrekt
PresetModal filtert inzwischen